gccida/c1/get_attr_prefix_0f
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20299:4: error: expected ';' after expression
rtx v18; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20299:5: error: use of undeclared identifier 'v18'
rtx v18; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20309:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20311:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20311:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20551:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( unsigned int)( which_alternative - 2) <= 2 && aligned_operand( recog_data_0.operand[1], HImode) ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20584:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20665:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20666:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20667:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20678:1: error: use of undeclared identifier 'v18'
v18 = recog_data_0.operand[0]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20678:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v18 = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20679:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20680:1: error: use of undeclared identifier 'v18'
v18 = recog_data_0.operand[0]->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20680:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v18 = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20681:31: error: use of undeclared identifier 'v18'; did you mean 'v17'?
v19 = insn_addresses_->data.i[v18->fld[0].rtint]; 
                              ^~~
                              v17
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/insn-attrtab.c:20298:18: note: 'v17' declared here
 struct rtx_def *v17; // rdi 
                 ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_prefix_0f/src/obj/insn-attrtab.o] Error 1
